# Aevon

./: .gitignore  LICENSE  README.md  done.txt  fix.js  next.config.ts  package-lock.json  package.json
desktop/: LICENSE  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/: ADVANCED_IMPLEMENTATION_PLAN.md  DESKTOP_ARCHITECTURE.md  LEGAL_REQUIREMENTS.md  PRD.md  SUPABASE_SETUP.md  UI_UX_GUIDELINES.md
mobile/: package-lock.json  package.json
mobile/src-tauri/: tauri.conf.json
mobile/src-tauri/icons/: icon.icns
public/: sw.js
scripts/: check-translations.mjs  generate-blog-data.js
src/actions/: blog-actions.ts
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts  sw.ts
src/app/blog/: ai-writing-software-trends-2024.md  best-writing-software-comparison-2024.md  blog-client.tsx  character-development-tips.md  how-to-create-compelling-villain.md  how-to-start-story-hook-readers.md  how-to-write-realistic-dialogue.md  (+7 more)
src/app/blog-sitemap.xml/: route.ts
src/components/: ThemeRegistry.tsx  header.tsx  structured-data.tsx  tauri-init.tsx  theme-provider.tsx
src/data/: blog.ts  docs.ts  generated-blog-data.ts  static-blog-data.ts
src/lib/: aevon-export.ts  blog-data.ts  blog-loader.ts  client.ts  i18n.tsx  offline-db.ts  store.ts  supabase.ts  sync-manager.ts  workspace.ts
supabase/migrations/: 20260314_sync_file_storage_usage.sql  20260319_add_lore_diagram_type.sql  20260319_add_scratchpad_to_projects.sql
(+65 files in other folders)
